Fixed navbar logo alignment and added title text

--- a/_sass/_main-navigation.scss
+++ b/_sass/_main-navigation.scss
@@ -5,12 +5,22 @@
 
  	.avatar {
  		height: 100%;
- 		border-radius: 100%;
+ 		border-radius: 3px;
+ 		margin-right: 3px;
+ 		margin-top: -3px;
+ 	}
+
+ 	.title {
+ 		color: rgba(255, 255, 255, 0.4);
  	}
 
  	.navbar-brand {
  		color: #fff;
  		font-size: 120%;
+ 		padding: 0;
+ 		margin: 15px 0 11px 0;
+ 		height: 30px;
+ 		vertical-align: text-bottom;
  	}
 
  	.nav {
